@@ -34,12 +34,11 @@ QuadCommand::QuadCommand()
 ,_depth(0)
 ,_textureID(0)
 ,_blendType(BlendFunc::DISABLE)
-,_quadCount(0)
-,_capacity(0)
+,_quadsCount(0)
 {
     _type = RenderCommand::Type::QUAD_COMMAND;
     _shader = nullptr;
-    _quad = nullptr;
+    _quads = nullptr;
 }
 
 void QuadCommand::init(int viewport, int32_t depth, GLuint textureID, GLProgram* shader, BlendFunc blendType, V3F_C4B_T2F_Quad* quad, ssize_t quadCount, const kmMat4 &mv)
@@ -48,63 +47,16 @@ void QuadCommand::init(int viewport, int32_t depth, GLuint textureID, GLProgram*
     _depth = depth;
     _textureID = textureID;
     _blendType = blendType;
-    _quadCount = quadCount;
     _shader = shader;
 
-    if(quadCount > _capacity ) {
-        //TODO find a better way to manage quads, current way will result in memory be wasted
-//        _quad = (V3F_C4B_T2F_Quad*)malloc(sizeof(V3F_C4B_T2F_Quad) * quadCount);
-        _quad = (V3F_C4B_T2F_Quad*) realloc(_quad, sizeof(*quad) * quadCount );
-        _capacity = quadCount;
-    }
+    _quadsCount = quadCount;
+    _quads = quad;
 
-    _quadCount = quadCount;
-    memcpy(_quad, quad, sizeof(V3F_C4B_T2F_Quad) * quadCount);
-
-    for(int i=0; i<quadCount; ++i) {
-        V3F_C4B_T2F_Quad *q = &_quad[i];
-
-        kmVec3 vec1, out1;
-        vec1.x = q->bl.vertices.x;
-        vec1.y = q->bl.vertices.y;
-        vec1.z = q->bl.vertices.z;
-        kmVec3Transform(&out1, &vec1, &mv);
-        q->bl.vertices.x = out1.x;
-        q->bl.vertices.y = out1.y;
-        q->bl.vertices.z = out1.z;
-
-        kmVec3 vec2, out2;
-        vec2.x = q->br.vertices.x;
-        vec2.y = q->br.vertices.y;
-        vec2.z = q->br.vertices.z;
-        kmVec3Transform(&out2, &vec2, &mv);
-        q->br.vertices.x = out2.x;
-        q->br.vertices.y = out2.y;
-        q->br.vertices.z = out2.z;
-
-        kmVec3 vec3, out3;
-        vec3.x = q->tr.vertices.x;
-        vec3.y = q->tr.vertices.y;
-        vec3.z = q->tr.vertices.z;
-        kmVec3Transform(&out3, &vec3, &mv);
-        q->tr.vertices.x = out3.x;
-        q->tr.vertices.y = out3.y;
-        q->tr.vertices.z = out3.z;
-
-        kmVec3 vec4, out4;
-        vec4.x = q->tl.vertices.x;
-        vec4.y = q->tl.vertices.y;
-        vec4.z = q->tl.vertices.z;
-        kmVec3Transform(&out4, &vec4, &mv);
-        q->tl.vertices.x = out4.x;
-        q->tl.vertices.y = out4.y;
-        q->tl.vertices.z = out4.z;
-    }
+    _mv = mv;
 }
 
 QuadCommand::~QuadCommand()
 {
-    free(_quad);
 }
 
 int64_t QuadCommand::generateID()
