@@ -7,6 +7,7 @@ cocos2d-x-3.0final ?.? ?
      [FIX]          ControlSlider doesn't support to set selected thumb sprite.
      [FIX]          ControlButton doesn't support to set scale ratio of touchdown state.
      [FIX]          Particles: Crash was triggered if there is not `textureFileName`section in particle plist file.
+     [FIX]          Renderer: QuadCommand::init() does not copy the Quads, it only store a reference making the code faster
      [FIX]          Tests: TestCpp works with CMake on Windows.
      [FIX]          Tests: Sprites Performance Test has 3 new tests
      [FIX]          TextureCache: getTextureForKey and removeTextureForKey work as expected
